--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>Hi T.Tanya.Thompson a.k.a wigjig.</p>
-<p>Feel free to delete everything in this repository and then start pushing real code up here.</p>
+<p>Feel free to delete everything in this repository and then start pushing real code up here. You're an owner of the organization (once you accept in your email).</p>
 <p><h1>Mwah. Love you</h1></p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
 
     </div>
 
