--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 <p>Hi T.Tanya.Thompson a.k.a wigjig.</p>
 <p>Feel free to delete everything in this repository and then start pushing real code up here. You're an owner of the organization (once you accept in your email).</p>
 <p><h1>Mwah. Love you</h1></p>
+<br />
+<br />
+<br />
+<br />
+<br />
+<p><h3>Don't delete the CNAME file or you'll break it.</h3></p>
 
     </div>
 
