--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Murrowwedding.GitHub.io by murrowwedding</title>
-  </head>
-
-  <body>
-
+---
+layout: default
+title: Murrow Wedding
+priority: 1.0
+---
     <header>
       <div class="container">
         <h1>Murrowwedding.GitHub.io</h1>
@@ -40,7 +30,3 @@
 <p><h3>Don't delete the CNAME file or you'll break it.</h3></p>
 
     </div>
-
-    
-  </body>
-</html>
