--- a/index.html
+++ b/index.html
@@ -3,30 +3,11 @@ layout: default
 title: Murrow Wedding
 priority: 1.0
 ---
-    <header>
-      <div class="container">
-        <h1>Murrowwedding.GitHub.io</h1>
-        <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/murrowwedding" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>Hi T.Tanya.Thompson a.k.a wigjig.</p>
-<p>Feel free to delete everything in this repository and then start pushing real code up here. You're an owner of the organization (once you accept in your email).</p>
-<p><h1>Mwah. Love you</h1></p>
-<br />
-<br />
-<br />
-<br />
-<br />
-<p><h3>Don't delete the CNAME file or you'll break it.</h3></p>
-
-    </div>
+<div class="spacer">
+</div>
+<div class="row test">
+  <div class="col-md-12">
+    <h1 class="cover-heading">Corbin &amp; Tanya</h1>
+    <hr class="hr-custom">
+  </div>
+</div>
