--- a/story.html
+++ b/story.html
@@ -1,12 +1,14 @@
 ---
 layout: default
-title: Story
+title: Our Story
 ---
 <div class="spacer">
 </div>
 <div class="row test">
   <div class="col-md-12">
-    <h1 class="cover-heading">Corbin &amp; Tanya</h1>
-    <hr class="hr-custom">
+    <h1>His Side of the Story</h1>
+    <p>Tanya impressed me and then she hated me and then she dated me.</p>
+    <h1>Her Side of the Story</h1>
+    <p>Everything he said is a lie...</p>
   </div>
 </div>
