updated registry and added some posts

--- a/info.html
+++ b/info.html
@@ -6,7 +6,26 @@ title: Info
 </div>
 <div class="row test">
   <div class="col-md-12">
-    <h1 class="cover-heading">Corbin &amp; Tanya</h1>
-    <hr class="hr-custom">
+  <h1>Registry</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Honeyfund</h3>
+        <p>We are so blessed to already have a lot of the items we'll need to
+          start our lives together. So, as an alternative, we'd really appreciate
+          it if you would check out our Honeyfund page. There, you can help send
+          us on the honeymoon of our dreams.</p>
+        <p>We know this isn't your usual wedding registry, but in lieu of gifts
+          we'd love contributions towards our trip to beautiful Nova Scotia. If
+          you prefer to purchase a more traditional wedding gift, we're also
+          registered at Bed Bath &amp; Beyond. Any gift is greatly appreciated!</p>
+        <div style="width:200px;margin:0 auto;">
+          <a href="http://www.honeyfund.com/wedding/murrowthompson2016" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h3>Bed, Bath, and Beyond</h3>
+        <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542750352&eventType=Wedding&pwsurl">View our Bed, Bath, and Beyond registry!</a>
+      </div>
+    </div>
   </div>
 </div>
