Formatting registry section

--- a/info.html
+++ b/info.html
@@ -18,15 +18,22 @@ title: Info
           we'd love contributions towards our trip to beautiful Nova Scotia. If
           you prefer to purchase a more traditional wedding gift, we're also
           registered at Bed Bath &amp; Beyond. Any gift is greatly appreciated!</p>
-          <img src="{{baseurl}}/images/honeyfund-logo_white.png" />
-        <div style="width:200px;margin:0 auto;">
+
+        <!--<div style="width:200px;margin:0 auto;">
           <a href="http://www.honeyfund.com/wedding/murrowthompson2016" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a>
-        </div>
+        </div>-->
       </div>
       <div class="col-md-6">
         <h3>Bed, Bath, and Beyond</h3>
         <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542750352&eventType=Wedding&pwsurl">View our Bed, Bath, and Beyond registry!</a>
-        <img src="{{baseurl}}/images/bed-bath_white.png" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <a href="http://www.honeyfund.com/wedding/murrowthompson2016"><img class="img-responsive registry-img" width="50%" src="{{baseurl}}/images/honeyfund-logo_white.png" /></a>
+      </div>
+      <div class="col-md-6">
+        <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542750352&eventType=Wedding&pwsurl"><img class="img-responsive registry-img" width="50%" src="{{baseurl}}/images/bed-bath_white.png" /></a>
       </div>
     </div>
   </div>
