--- a/info.html
+++ b/info.html
@@ -2,14 +2,12 @@
 layout: default
 title: Info
 ---
-<div class="spacer">
-</div>
 <div class="row test">
   <div class="col-md-12">
   <h1>Registry</h1>
     <div class="row">
-      <div class="col-md-6">
-        <h3>Honeyfund</h3>
+      <div class="col-md-offset-3 col-md-6">
+        <!--<h3>Honeyfund</h3>-->
         <p>We are so blessed to already have a lot of the items we'll need to
           start our lives together. So, as an alternative, we'd really appreciate
           it if you would check out our Honeyfund page. There, you can help send
@@ -23,10 +21,10 @@ title: Info
           <a href="http://www.honeyfund.com/wedding/murrowthompson2016" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a>
         </div>-->
       </div>
-      <div class="col-md-6">
+      <!--<div class="col-md-6">
         <h3>Bed, Bath, and Beyond</h3>
         <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542750352&eventType=Wedding&pwsurl">View our Bed, Bath, and Beyond registry!</a>
-      </div>
+      </div>-->
     </div>
     <div class="row">
       <div class="col-md-6">
