Added registry page, changed default layout and navbar, updated info page, wrote story page for loop

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Murrow Wedding
 priority: 1.0
 ---
-<div class="spacer">
+<div class="cover-spacer">
 </div>
 <div class="row test">
   <div class="col-md-12">
