--- a/rsvp.html
+++ b/rsvp.html
@@ -2,8 +2,109 @@
 layout: default
 title: RSVP
 ---
+<div class="cookie-jar">
+  <div class="row test">
+    <div class="row">
+      <div class="col-sm-12">
 
-<div class="row test">
-  <div class="col-md-12">
+        <form id="rsvp-form" class="form-horizontal">
+
+          <div id="fname-group" class="form-group">
+            <label class="col-sm-4 control-label">First Name</label>
+            <div class="col-sm-6">
+              <input type="text" class="form-control" id="fname" placeholder="First name">
+            </div>
+          </div>
+
+          <div id="lname-group" class="form-group">
+            <label class="col-sm-4 control-label">Last Name</label>
+            <div class="col-sm-6">
+              <input type="text" class="form-control" id="lname" placeholder="Last name">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-4">
+              <div id="rsvp-no" class="btn btn-default btn-lg inactive"><span class="glyphicon glyphicon-unchecked"></span> No, I won't be coming.</div>
+            </div>
+            <div class="col-sm-4">
+              <div id="rsvp-yes" class="btn btn-default btn-lg inactive"><span class="glyphicon glyphicon-unchecked"></span> Yes, I will be coming!</div>
+            </div>
+          </div>
+
+          <div class="collapse" id="confirm-form">
+
+            <div class="form-group">
+              <label class="col-sm-4 control-label">Number Attending the Wedding</label> <!-- <br><small>(including yourself)</small> -->
+              <div class="col-sm-6">
+                <!--<input type="number" class="form-control" name="quantity" min="1" max="10" placeholder="Number attending">-->
+                <div class="input-group">
+                  <span class="input-group-btn">
+                      <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                          <span class="glyphicon glyphicon-minus"></span>
+                      </button>
+                  </span>
+                  <input id="numWed" type="text" name="quant[1]" class="form-control input-number" placeholder="Number attending" min="1" max="10" value="1">
+                  <span class="input-group-btn">
+                      <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
+                          <span class="glyphicon glyphicon-plus"></span>
+                      </button>
+                  </span>
+              </div>
+              </div>
+            </div>
+
+            <div class="form-group collapse" id="guest-names">
+              <label class="col-sm-4 control-label">Name(s)</label>
+              <div class="col-sm-6">
+                <input id="otherGuests" type="text" class="form-control" placeholder="Name(s) of others attending">
+              </div>
+            </div>
+
+            <!--Let's just make this a # attending reception textbox, like # attending the wedding,
+            rather than radio buttons. Make default value # attending wedding.-->
+            <div class="form-group text-left">
+              <label class="col-sm-4 control-label">Attending the reception</label>
+              <div class="col-sm-8">
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+                    Yes
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
+                    No
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                    Some (<input type="text" placeholder="#" maxlength="1" class="form-control radio-text">)
+                  </label>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-4 control-label">Notes</label>
+              <div class="col-sm-6">
+                <textarea id="notes" class="form-control" placeholder="Additional notes here..."></textarea>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-6">
+              <button id="submit-rsvp" type="button" class="btn btn-default" >Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+            </div>
+          </div>
+
+        </form>
+
+      </div>
+    </div>
   </div>
 </div>
