Changed cookie-monster to local-storage-monster

--- a/rsvp.html
+++ b/rsvp.html
@@ -2,7 +2,7 @@
 layout: default
 title: RSVP
 ---
-<div class="cookie-jar">
+<div class="blank-form">
   <div class="row test">
     <div class="row">
       <div class="col-sm-12">
@@ -104,6 +104,22 @@ title: RSVP
 
         </form>
 
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="delete-form" style="display: none;">
+  <div class="row test">
+    <div class="row">
+      <div class="col-sm-12">
+        <form id="rsvp-form" class="form-horizontal">
+          <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-6">
+              <button id="delete-rsvp" type="button" class="btn btn-default" >Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
