--- a/rsvp.html
+++ b/rsvp.html
@@ -55,35 +55,29 @@ title: RSVP
             </div>
 
             <div class="form-group collapse" id="guest-names">
-              <label class="col-sm-4 control-label">Name(s)</label>
+              <label class="col-sm-4 control-label">Other Guests</label>
               <div class="col-sm-6">
                 <input id="otherGuests" type="text" class="form-control" placeholder="Name(s) of others attending">
               </div>
             </div>
 
-            <!--Let's just make this a # attending reception textbox, like # attending the wedding,
-            rather than radio buttons. Make default value # attending wedding.-->
-            <div class="form-group text-left">
-              <label class="col-sm-4 control-label">Attending the reception</label>
-              <div class="col-sm-8">
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
-                    Yes
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
-                    No
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                    Some (<input type="text" placeholder="#" maxlength="1" class="form-control radio-text">)
-                  </label>
-                </div>
+            <div class="form-group">
+              <label class="col-sm-4 control-label">Number Attending the Reception</label> <!-- <br><small>(including yourself)</small> -->
+              <div class="col-sm-6">
+                <!--<input type="number" class="form-control" name="quantity" min="1" max="10" placeholder="Number attending">-->
+                <div class="input-group">
+                  <span class="input-group-btn">
+                      <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                          <span class="glyphicon glyphicon-minus"></span>
+                      </button>
+                  </span>
+                  <input id="numRec" type="text" name="quant[1]" class="form-control input-number" placeholder="Number attending" min="1" max="10" value="1">
+                  <span class="input-group-btn">
+                      <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
+                          <span class="glyphicon glyphicon-plus"></span>
+                      </button>
+                  </span>
+              </div>
               </div>
             </div>
 
