Updated Submit btn dynamic text

--- a/rsvp.html
+++ b/rsvp.html
@@ -2,11 +2,14 @@
 layout: default
 title: RSVP
 ---
-<div class="blank-form">
-  <div class="row test">
-    <div class="row">
-      <div class="col-sm-12">
 
+<div class="row test">
+  <div class="row">
+    <div class="col-sm-12">
+      <p>Please let us know to expect you using the form below or by calling 903.355.8658.</p>
+      <p>If you need to update your RSVP at any time you can return to this page to update your info or give us a call.</p>
+      <br />
+      <div class="blank-form">
         <form id="rsvp-form" class="form-horizontal">
 
           <div id="fname-group" class="form-group">
@@ -97,16 +100,15 @@ title: RSVP
           </div>
 
         </form>
-
       </div>
     </div>
   </div>
 </div>
 
-<div class="delete-form" style="display: none;">
-  <div class="row test">
-    <div class="row">
-      <div class="col-sm-12">
+<div class="row test">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="delete-form" style="display: none;">
         <form id="rsvp-form" class="form-horizontal">
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-6">
