added map maybe

--- a/info.html
+++ b/info.html
@@ -20,8 +20,8 @@ title: Information
               <div class="col-sm-8">
                 <p class="text-fluid"><strong>Bethany First Church of the Nazarene</strong>
                 <a href="https://www.google.com/maps/place/Bethany+First+Church+of+the+Nazarene/@35.513207,-97.631599,17z/data=!3m1!4b1!4m2!3m1!1s0x0:0xd7a98e204472632" target="_blank">
-                  <span class="glyphicon glyphicon-map-marker" data-toggle="tooltip" data-placement="top" title="Open in Google Maps"></span>
-                </a><br>
+                  <span class="glyphicon glyphicon-map-marker" data-toggle="tooltip" data-placement="top" title="Open in Google Maps"></span></a>
+                <br>
                 6789 NW 39th Expressway Bethany, OK 73008<br>
                 (405) 789-2050 | <a href="http://www.bethanynaz.org/" target="_blank">bethanynaz.org</a><br>
                 <a href="https://www.google.com/maps/place/Bethany+First+Church+of+the+Nazarene/@35.513207,-97.631599,17z/data=!3m1!4b1!4m2!3m1!1s0x0:0xd7a98e204472632" target="_blank">Open in Google Maps</a>
