--- a/rsvp.html
+++ b/rsvp.html
@@ -57,26 +57,19 @@ title: RSVP
               </div>
             </div>
 
-            <div class="form-group collapse" id="guest-names">
-              <label class="col-sm-4 control-label">Other Guests</label>
-              <div class="col-sm-6">
-                <input id="otherGuests" type="text" class="form-control" placeholder="Name(s) of others attending">
-              </div>
-            </div>
-
             <div class="form-group">
               <label class="col-sm-4 control-label">Number Attending the Reception</label> <!-- <br><small>(including yourself)</small> -->
               <div class="col-sm-6">
                 <!--<input type="number" class="form-control" name="quantity" min="1" max="10" placeholder="Number attending">-->
                 <div class="input-group">
                   <span class="input-group-btn">
-                      <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                      <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[2]">
                           <span class="glyphicon glyphicon-minus"></span>
                       </button>
                   </span>
-                  <input id="numRec" type="text" name="quant[1]" class="form-control input-number" placeholder="Number attending" min="1" max="10" value="1">
+                  <input id="numRec" type="text" name="quant[2]" class="form-control input-number" placeholder="Number attending" min="1" max="10" value="1">
                   <span class="input-group-btn">
-                      <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
+                      <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[2]">
                           <span class="glyphicon glyphicon-plus"></span>
                       </button>
                   </span>
@@ -94,8 +87,8 @@ title: RSVP
           </div>
 
           <div class="form-group">
-            <div class="col-sm-offset-4 col-sm-6">
-              <button id="submit-rsvp" type="button" class="btn btn-default" >Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+            <div class="col-sm-offset-4 col-sm-4">
+              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" >Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
             </div>
           </div>
 
