Nix the timeline, just do basic 'about' and important events

--- a/registry.html
+++ b/registry.html
@@ -12,8 +12,8 @@ title: Registry
             it if you would check out our Honeyfund page. There, you can help send
             us on the honeymoon of our dreams.</p>
           <p>We know this isn't your typical wedding registry, but in lieu of gifts
-            we'd love contributions towards our trip to beautiful Nova Scotia. If
-            you prefer to purchase a more traditional wedding gift, we're also
+            we would prefer contributions towards our trip to beautiful Nova Scotia. If
+            you'd really rather purchase a more traditional wedding gift, we're also
             registered at Bed Bath &amp; Beyond. Any gift is greatly appreciated!</p>
         </div>
       </div>
