--- a/rsvp.html
+++ b/rsvp.html
@@ -6,7 +6,7 @@ title: RSVP
 <div class="row test">
   <div class="row">
     <div class="col-sm-12">
-      <p>Please let us know to expect you using the form below or by calling 903.355.8658.</p>
+      <p>Please let us know to expect you using the form below or by calling ###-###-####</p>
       <p>If you need to update your RSVP at any time you can return to this page to update your info or give us a call.</p>
       <br />
       <div class="blank-form">
@@ -77,13 +77,13 @@ title: RSVP
               </div>
             </div>
 
-            <div class="form-group">
-              <label class="col-sm-4 control-label">Notes</label>
-              <div class="col-sm-6">
-                <textarea id="notes" class="form-control" placeholder="Additional notes here..."></textarea>
-              </div>
-            </div>
+          </div>
 
+          <div class="form-group">
+            <label class="col-sm-4 control-label">Notes</label>
+            <div class="col-sm-6">
+              <textarea id="notes" class="form-control" placeholder="Additional notes here..."></textarea>
+            </div>
           </div>
 
           <div class="form-group">
