--- a/info.html
+++ b/info.html
@@ -27,6 +27,12 @@ title: Information
               </p>
             </div>
           </div>
+          <div class="form-group">
+            <label class="control-label col-sm-5">Reception</label>
+            <div class="col-sm-7">
+              <p class="text-fluid">The reception will be held in the atrium after the ceremony and is open to all guests. There will be food, and of course - cake!</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
