Make corbin's placeholders on about us

--- a/story.html
+++ b/story.html
@@ -9,25 +9,29 @@ title: Our Story
     <h2>The Groom</h2>
     <img src="{{baseurl}}/images/corbin-face.png" class="img-circle img-responsive center-block face-corbin">
     <p></p>
+    <div class="event">
+      <h3>First Met</h3>
+      <p></p>
+    </div>
+    <div class="event">
+      <h3>Proposal</h3>
+      <p></p>
+    </div>
   </div>
 
   <div class="col-md-6 text-center">
     <h2>The Bride</h2>
     <img src="{{baseurl}}/images/tanya-face.png" class="img-circle img-responsive center-block face-tanya">
     <p>Tanya is studying Computer Science at Oklahoma Christian University. Her hobbies include playing video games, D&amp;D, and board games, as well as drawing and painting. She loves Lord of the Rings, and loves Star Wars only slightly less.</p>
-
-    <div>
+    <div class="event">
       <h3>First Met</h3>
       <p>After doing the UIL programming competitions in high school, I was interested in the ACM programming competition that OC participated in. </p>
     </div>
-
-    <div>
+    <div class="event">
       <h3>Proposal</h3>
       <p>It was our 2-year annivarsary, and Corbin said we could have a picnic at the park. He brought me there, but hadn't brought any food! We walked and talked around one of the trails, and all the while I kept asking where our food was (I was starving, of course). When we got around to the pond, I saw that he had already set up our picnic. As we got to the table, I saw placeholders with our names on them. I got around to my side, and had to do a double-take; my placeholder didn't say "Tanya", but instead "Future Mrs. Murrow". I turned around, and he was down on one knee! I was totally surprised, but when I realized what was happening, I said yes!</p>
     </div>
-
   </div>
-
 </div>
 
 <!--
