--- a/story.html
+++ b/story.html
@@ -8,7 +8,7 @@ title: Our Story
   <div class="col-md-6 text-center">
     <h2>The Groom</h2>
     <img src="{{baseurl}}/images/corbin-face.png" class="img-circle img-responsive center-block face-corbin">
-    <p></p>
+    <p>Corbin is studying Electrical Engineering with a minor in Computer Science at Oklahoma Christian University. His hobbies include D&amp;D, board games and video games, as well as electronics projects and asking Tanya to paint, draw, or make something (like this website) for him (or one of his hobbies).</p>
     <div class="event">
       <h3>First Met</h3>
       <p></p>
