Story page updates

--- a/story.html
+++ b/story.html
@@ -9,8 +9,29 @@ title: Our Story
     <h2>The Groom</h2>
     <img src="{{baseurl}}/images/corbin-face.png" class="img-circle img-responsive center-block face-corbin">
     <p></p>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Favorite thing about The Bride</h3>
+      </div>
+      <div class="panel-body">
+        Panel content
+      </div>
+    </div>
+
     <div class="event">
       <h3>First Met</h3>
+      <p></p>
+    </div><div class="event">
+      <h3>Asking Out</h3>
+      <p></p>
+    </div>
+    <div class="event">
+      <h3>First Date</h3>
+      <p></p>
+    </div>
+    <div class="event">
+      <h3>Started Dating</h3>
       <p></p>
     </div>
     <div class="event">
@@ -22,10 +43,32 @@ title: Our Story
   <div class="col-md-6 text-center">
     <h2>The Bride</h2>
     <img src="{{baseurl}}/images/tanya-face.png" class="img-circle img-responsive center-block face-tanya">
-    <p>Tanya is studying Computer Science at Oklahoma Christian University. Her hobbies include playing video games, D&amp;D, and board games, as well as drawing and painting. She loves Lord of the Rings, and loves Star Wars only slightly less.</p>
+    <p>Tanya is studying Computer Science at Oklahoma Christian University. Her hobbies include playing video games, D&amp;D, and board games, as well as drawing, reading, and painting. She loves Lord of the Rings, and loves Star Wars only slightly less.</p>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Favorite thing about The Groom</h3>
+      </div>
+      <div class="panel-body">
+        Panel content
+      </div>
+    </div>
+
     <div class="event">
       <h3>First Met</h3>
       <p>After doing the UIL programming competitions in high school, I was interested in the ACM programming competition that OC participated in. </p>
+    </div>
+    <div class="event">
+      <h3>Asking Out</h3>
+      <p></p>
+    </div>
+    <div class="event">
+      <h3>First Date</h3>
+      <p></p>
+    </div>
+    <div class="event">
+      <h3>Started Dating</h3>
+      <p></p>
     </div>
     <div class="event">
       <h3>Proposal</h3>
