Updated headers and more info

--- a/story.html
+++ b/story.html
@@ -24,16 +24,18 @@ title: Our Story
       <p>I was sitting in a practice session for the ACM Programming Competition with my other teammates, Kyler and Silas, and the other competition participants. Professor Harbert walked in with a timid girl with stunning red hair and introduced her to us as someone interested in the competition. I did not catch her name. We continued to work quietly until my team was stumped on a problem, at which time we asked the room for help. The timid girl (still nameless) had figured it out, and I was very impressed! After the practice was over and we went our separate ways, I was determined to find out who she was and, as I told Kyler that same day, date her.</p>
       <p>A few weeks passed and the competition loomed closer. Our team mentor, Professor Leftwich, sent out an email asking for individuals to reply back with their cell numbers, for his record. Thinking I was clever, I used "Reply All" instead of simply "Reply" in hopes that others, including the red-haired girl, would do the same. Unfortunately for me, while others did do the same she did not and I was left without her phone number even still. One good thing did come from this email. Professor Leftwich sent it to everyone coming to the competition and I was able to deduce that her name was Tanya Thompson.</p>
       <p>It was on the bus to the competition that we first introduced ourselves to each other. We didn't speak very much, just in general conversation with others on the bus. I can't remember how I got her number, all I remember is that the night before the conversation we stayed up far too late texting each other. I'm sure the guys I was rooming with didn't appreciate the light from my phone or my soft snickering at her (or my) jokes, but I didn't care. This was just the beginning. We enjoyed the competition (her team did better than mine) and spent the whole bus ride back privately texting each other while conversing out loud with the whole bus. This was the beginning.</p>
-    </div><div class="event">
-      <h3>Asking Out</h3>
-      <p></p>
+    </div>
+    <div class="event">
+        <h3>From First Met to First Date</h3>
+        <p>“There was a judge in a certain city,” he said, “who neither feared God nor cared about people. A widow of that city came to him repeatedly, saying, ‘Give me justice in this dispute with my enemy.’ The judge ignored her for a while, but finally he said to himself, ‘I don’t fear God or care about people, but this woman is driving me crazy. I’m going to see that she gets justice, because she is wearing me out with her constant requests!’” -- Luke 18:2-5, NLT</p>
+        <p>This verse reflects a term I have coined in getting Tanya to go on a date with me: <strong>persistent annoyance</strong>. We continued to talk in the months following the programming competition, and I did everything in my power to get this girl to go on a date with me. We started hanging out all the time, we started sitting by each other in class, even working on the same team for the Programming I final project. I was desperate, </p>
     </div>
     <div class="event">
       <h3>First Date</h3>
       <p></p>
     </div>
     <div class="event">
-      <h3>Started Dating</h3>
+      <h3>From First Date to Proposal</h3>
       <p></p>
     </div>
     <div class="event">
@@ -59,10 +61,6 @@ title: Our Story
     <div class="event">
       <h3>First Met</h3>
       <p>After doing the UIL programming competitions in high school, I was interested in the ACM programming competition that OC participated in. </p>
-    </div>
-    <div class="event">
-      <h3>Asking Out</h3>
-      <p></p>
     </div>
     <div class="event">
       <h3>First Date</h3>
