--- a/story.html
+++ b/story.html
@@ -15,7 +15,7 @@ title: Our Story
         <h3 class="panel-title">Favorite thing about The Bride</h3>
       </div>
       <div class="panel-body">
-        Her long, beautiful red hair. (: Also, I love her ability to create something out of nothing with her art. 
+        Her long, beautiful red hair. (: Also, I love her ability to create something out of nothing with her art.
       </div>
     </div>
 
@@ -52,7 +52,7 @@ title: Our Story
         <h3 class="panel-title">Favorite thing about The Groom</h3>
       </div>
       <div class="panel-body">
-        Panel content
+        <p>He's very self-motivated, and I really admire (and envy) that. If he wants something, he'll get it. If he wants to learn how to do something, he'll teach himself. He's very smart, and good at almost everything he does. I also most definitely love his cooking. ;)</p>
       </div>
     </div>
 
