--- a/story.html
+++ b/story.html
@@ -57,7 +57,7 @@ title: Our Story
         <h3 class="panel-title">Favorite thing about The Groom</h3>
       </div>
       <div class="panel-body">
-        <p>He's very self-motivated, and I really admire (and envy) that. If he wants something, he'll get it. If he wants to learn how to do something, he'll teach himself. He's very smart, and good at almost everything he does. I also most definitely love his cooking. ;)</p>
+        <p>He's very self-motivated, and I really admire (and envy) that. If he wants something, he'll get it (as I have experienced firsthand...). If he wants to learn how to do something, he'll teach himself. He's very smart, and good at almost everything he does. I also most definitely love his cooking. ;)</p>
       </div>
     </div>
 
