--- a/rsvp.html
+++ b/rsvp.html
@@ -6,7 +6,7 @@ title: RSVP
 <div class="row test">
   <div class="row">
     <div class="col-sm-12">
-      <p>Please let us know to expect you using the form below or by calling ###-###-####</p>
+      <p>Please let us know to expect you using the form below or by calling 405-265-8854</p>
       <p>If you need to update your RSVP at any time you can return to this page to update your info or give us a call.</p>
       <br />
       <div class="blank-form">
