--- a/registry.html
+++ b/registry.html
@@ -22,7 +22,9 @@ title: Registry
             next to "Pay with Credit Card". This will switch it to cash or check mode. You can
             then enter your name and email to reserve the gift as well as leave us a message!
             Honeyfund will then generate a gift certificate that you can mail (along with 
-            cash or check) to us, or bring to our wedding if you come (we hope you do!).</p>
+            cash or check) to us, or bring to our wedding if you come (we hope you do!).
+            You can also leave us a question, comment, or advice for married life on our
+            Honeyfund page in the Guest book.</p>
           <p>We know this isn't your typical wedding registry, but in lieu of gifts
             we would prefer contributions towards our trip to beautiful Nova Scotia. If
             you'd really rather purchase a more traditional wedding gift, we're also
