--- a/story.html
+++ b/story.html
@@ -63,7 +63,7 @@ title: Our Story
         <p>The date was set. The ring was bought. Her parents' blessing was given. Now I just had to plan and execute. Easier said than done. By moving my date up to April, I had significantly lessened my planning time and couldn't do the D&ampD proposal anymore. I had to come up with a new plan.</p>
         <p>Hafer Park in Edmond is absolutely beautiful in the spring. Tanya and I had walked around its trails a few times and I knew it would be a great place to propose. I came up with the idea of a picnic date, during which I would propose. I gathered the supplies: a folding table and chairs from Grandma, an ice chest and sandwich supplies from Wal-Mart, place cards that said "Mr. Murrow" and "Future Mrs. Murrow" on them. I went out to the park after classes, around 4 PM, on the day of the proposal and set everything up. I recruited my roommates to stand guard over the setup in the park and make sure that nobody disturbed it. I had a Jon assigned to taking pictures (covertly, of course) and a Drew assigned to taking video (also covertly) as we approached the table. They had both been briefed on the proposal plan using the diagram (I'm an engineer, give me a break) I drew.</p>
         <p>After setting everything up and doing a dry run with the guys, I left to go pick up Tanya. I made her dress up in a dress (she complained because we were going to the park) and once again she looked gorgeous. We went to the park, but before we sat down for dinner, I took her on a walk around the trails of the park. I made sure to park away from the picnic table and chairs so that she wasn't aware of them. During the walk I recounted to her our story and all the things I loved about her. She was in no mood for romance or niceties, however, because she was hungry. She kept asking me where the food was and when we would get to eat! Finally, we came to the picnic table that I had set up. I set it up so that for her to look at her place card, her back would be to me. While she was looking at her place card, I dropped to one knee and pulled out the ring. When she turned back around, I popped the question!</p>
-        <p><strong><em>And she said yes!</em></strong></p>
+        <p class="text-center"><strong><em>And she said yes!</em></strong></p>
         <p>I called the guys out of hiding (much to her chagrin, as she found out she had been photographed and videoed) and we took some pictures by the lake before settling down to have our picnic. Funnily enough, she barely ate anything!</p>
       </div>
     </div>
@@ -87,10 +87,12 @@ title: Our Story
       <h3>First Met</h3>
       <div class="text-left">
         <p>After doing the UIL programming competitions in high school, I was interested in the ACM programming competition that OC participated in. I spoke with Professor Harbert about being in the competition and after a small delay he was able to get me on a team. Letting me skip lab that day, he showed me to the classroom where the practice was taking place.</p>
-        <p>I walked in the door and looking around the room, there were three guys sitting together at one end of a long table and another guy sitting several seats down. I was a little embarrassed because, since we came in late, everyone had turned to look at us. Professor Leftwich, the team mentor, introduced me to the other students. The three guys sitting together were Silas, Kyler, and Corbin and were already a team; the other guy by himself was Robert.</p>
-        <p>Leftwich put me to work on some practice problems with Robert, who would be one of my teammates. After a while Robert had to leave, and so I continued working by myself.</p>
+        <p>I walked in the door and looking around the room, there were three guys sitting together at one end of a long table and another guy sitting several seats down. I was a little embarrassed because, since we came in late, everyone had turned to look at us. Professor Leftwich, the team mentor, introduced me to the other students.</p>
+        <p>The three guys sitting together were Silas, Kyler, and Corbin and were already a team; the other guy by himself was Robert. Leftwich put me to work on some practice problems with Robert, who would be one of my teammates. After a while Robert had to leave, and so I continued working by myself.</p>
         <p>Soon I began to hear conversation from the other team about a problem they were struggling with. I thought to myself, "If I could singlehandedly beat these guys to figuring out this problem, that would be awesome." I spoke up, "Which problem are you guys talking about?" They answered, I turned to the problem to read it. I mumbled "Hmm, oh yeah okay." and began working on a solution.</p>
-        <p>A few minutes later I was pretty sure I had it. They were still bickering away, trying to solve the problem. I double- and triple-checked mine, afraid to look dumb instead of cool (like I was planning). I piped up, "Hey, I think I got it." They stopped and turned to look at me. With a slightly skeptical face, Corbin wheeled himself (via rolley chair) over beside me. I showed him my code and ran the program. </p>
+        <p>A few minutes later I was pretty sure I had it. They were still bickering away, trying to solve the problem. I double- and triple-checked mine, afraid that if I missed anything I would look dumb instead of cool (like I was planning). I piped up, "Hey, I think I got it." They stopped and turned to look at me. With a slightly skeptical face, Corbin wheeled himself across the room (via rolley chair) over beside me. I showed him my code and ran the program. He saw that it worked, and so I told his team how I got my solution.</p>
+        <p>Wanting to end the practice on a good note, I decided I should leave. It was time for dinner anyways, so I packed up my things and headed out.</p>
+        <p>First impression? <em>Naaaiiiled it.</em></p>
       </div>
     </div>
     <div class="event">
@@ -118,64 +120,3 @@ title: Our Story
     </div>
   </div>
 </div>
-
-<!--
-{% for story in {{site.posts}} reversed %}
-<div class="event">
-  <div class="row">
-    <div class="col-md-12 text-center">
-      <h3>{{story.title}}</h3>
-      <p><span class="glyphicon glyphicon-calendar"></span> {{story.event-date}}</p>
-      <p>{{story.place}}</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="media">
-        <div class="media-left media-middle">
-          <a href="#">
-            <img class="media-object img-circle face-small" src="{{baseurl}}/images/corbin-face.png">
-          </a>
-        </div>
-        <div class="media-body">
-          {{story.corbin}}
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="media">
-        <div class="media-body">
-          {{story.tanya}}
-        </div>
-        <div class="media-right media-middle">
-          <a href="#">
-            <img class="media-object img-circle face-small" src="{{baseurl}}/images/tanya-face.png">
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-{%endfor%} -->
-
-<!-- <div class="row">
-  <div class="col-md-12">
-    <ul class="timeline">
-      {% for story in {{site.posts}} reversed %}
-      <li>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h3 class="timeline-title">{{story.title}} <small class="text-muted"></small></h3>
-            <p>{{story.place}}<br><small class="text-muted"><span class="glyphicon glyphicon-calendar"></span> {{story.event-date}}</small></p>
-          </div>
-          <div class="timeline-body">
-            <img class="img-responsive" src="{{story.image}}" />
-            {{story.content}}
-          </div>
-        </div>
-      </li>
-      {%endfor%}
-      <li class="clearfix" style="float: none;"></li>
-    </ul>
-  </div>
-</div> -->
