--- a/story.html
+++ b/story.html
@@ -85,6 +85,7 @@ title: Our Story
 
     <div class="event">
       <h3>First Met</h3>
+      <p>Oklahoma Christian University<br><span class="glyphicon glyphicon-calendar"></span> October 1, 2012</p>
       <div class="text-left">
         <p>After doing the UIL programming competitions in high school, I was interested in the ACM programming competition that OC participated in. I spoke with Professor Harbert about being in the competition and after a small delay he was able to get me on a team. Letting me skip lab that day, he showed me to the classroom where the practice was taking place.</p>
         <p>I walked in the door and looking around the room, there were three guys sitting together at one end of a long table and another guy sitting several seats down. I was a little embarrassed because, since we came in late, everyone had turned to look at us. Professor Leftwich, the team mentor, introduced me to the other students.</p>
@@ -102,6 +103,7 @@ title: Our Story
     </div>
     <div class="event">
       <h3>First Date</h3>
+      <p>Johnny Carino's Italian Restaurant<br><span class="glyphicon glyphicon-calendar"></span> February 14, 2013</p>
       <div class="text-left">
         <p>We went to Johnny Carino's, an Italian restaurant I had never been to. It felt a little awkward at first, I think because the other small part of me knew this was totally a date. Soon after we were seated though, we (I, at least) relaxed and were soon having fun chatting about our days and how classes went. Eventually the food came out, it was great. Even after we got our ticket, we continued to sit and talk for another hour or so. We doodled on the reciepts, spelling our names in hex and trying to draw Pokemon from memory. Finally we left, and </p>
       </div>
@@ -114,6 +116,7 @@ title: Our Story
     </div>
     <div class="event">
       <h3>Proposal</h3>
+      <p>Hafer Park<br><span class="glyphicon glyphicon-calendar"></span> April 1, 2015</p>
       <div class="text-left">
         <p>It was our 2-year annivarsary, and Corbin said we could have a picnic at the park. He brought me there, but hadn't brought any food! We walked and talked around one of the trails, and all the while I kept asking where our food was (I was starving, of course). When we got around to the pond, I saw that he had already set up our picnic. As we got to the table, I saw placeholders with our names on them. I got around to my side, and had to do a double-take; my placeholder didn't say "Tanya", but instead "Future Mrs. Murrow". I turned around, and he was down on one knee! I was totally surprised, but when I realized what was happening, I said yes!</p>
       </div>
