--- a/story.html
+++ b/story.html
@@ -99,6 +99,11 @@ title: Our Story
     <div class="event">
         <h3>From First Met to First Date</h3>
         <div class="text-left">
+          <p>On October 19th we left for the programming competition at LeTourneau University in Longview, Texas. When we arrived at the hotel, we ordered pizza for dinner and the teams had a big study session together before the competition the next day. Of course our studying soon dissolved into chatting, and before we knew it it was midnight.</p>
+          <p>As we split up to go to our rooms (the other girl and I in one room, and the guys in another) Corbin offered to text one of us when they were going to breakfast. In an event that would <em>change the course of history <strong>forever</strong></em>, I offered my number in exchange. And so our friendship began.</p>
+          <p>In the following months, we texted constantly. After the competition he asked if I wanted to sit by him and his friends in our Programming 1 class, so I did. We started working on assignments together when partners were allowed, and got to see each other every other day.</p>
+          <p>I remember one instance about a month or so later; he messaged me and asked for help on an assignment. I tried to send my code, but he still couldn't get it to work and wanted me to come look. It made me feel good to be asked for help (only to find out A YEAR later that I was TOTALLY being played). I met him under the big pavilion in the middle of campus where there were tables and chairs.</p>
+          <p>We spent an hour or more trying to fix his code. I couldn't figure out what was wrong with it, and suggested he email the professor. While we waited for a possible response (which, funnily enough, would never come), we started watching youtube videos and talking about other things. I had fun, but eventually we had to go back to our dorms for curfew. We hadn't hung out outside of class yet, and this was a new step in our friendship.</p>
         </div>
     </div>
     <div class="event">
